force-app/main/default/objects/Rate_Dependency__c/Rate_Dependency__c.object-meta.xml
<CustomObject>
    <label>Rate Dependency</label>
    <nameField>
        <displayFormat>RD-{0000}</displayFormat>
        <label>Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>