force-app/main/default/objects/Rate_Dependency__c/fields/Dependency_Child_Rate__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Child_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependency Child Rate</label>
    <referenceTo>Rate__c</referenceTo>
    <relationshipLabel>Dependency Parent Rates</relationshipLabel>
    <relationshipName>DependencyChildRates</relationshipName>
    <type>Lookup</type>
</CustomField>