force-app/main/default/objects/Rate_Dependency__c/fields/Dependency_Parent_Rate__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Parent_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependency Parent Rate</label>
    <referenceTo>Rate__c</referenceTo>
    <relationshipLabel>Dependency Child Rates</relationshipLabel>
    <relationshipName>DependencyParentRates</relationshipName>
    <type>Lookup</type>
</CustomField>