force-app/main/default/objects/Rate_Dependency__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>