force-app/main/default/objects/Rate_Dependency__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Auto-set if left blank.  Used to migrate this data between the Sandboxes and Production.</description>
    <externalId>true</externalId>
    <inlineHelpText>Auto-set if left blank.  Used to migrate this data between the Sandboxes and Production.</inlineHelpText>
    <label>Unique ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>